--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
         "types.h": "c",
         "riscv.h": "c",
         "defs.h": "c",
+        "spinlock.h": "c",
+        "user.h": "c"
     },
+    "C_Cpp.errorSquiggles": "disabled",
 }
